tests/NormalTests/paczka2/big_fuzzy/21253753.err
Error in line 1: S786 A499 25,5
Error in line 8: kT1ZHEjv A182 4,1
Error in line 25: S786 S707 39,2
Error in line 27: Xe1N3J S707 12,8
Error in line 30: Xe1N3J S786 24,2
Error in line 31: Xe1N3J S707 81,0
Error in line 36: oD3rCzzX A182 68,2
Error in line 42: 3OZM95 A182 85,0
Error in line 54: yQCgqDj Ax82 98,7
Error in line 56: yQCgqDj A182 64,2
Error in line 62: S786 A499 62,75
Error in line 70: oD3rCzzX S707 23,1
Error in line 78: 3OZM95 A499 24,6
Error in line 96: yQCgqDj S786 72,3
Error in line 91: Xe1N3J A182 2,7
Error in line 109: kT1ZHjv A499 63,3
Error in line 104: 3OZM95 S786 37,1
Error in line 126: kT1ZHEjv A499 87,5
Error in line 138: yQCgqDj S707 78,2
Error in line 154: yQCgqDj A182 14,6
Error in line 159: 3OZM95 S707 15,7
Error in line 157: kT1ZHEjv A499 22,2
Error in line 172: oD3rCzzX A182 68,5
Error in line 184: kT1ZHEjv S786 67,3
Error in line 192: S786 S707 84,6
Error in line 189: yQCgqDj S786 35,5
Error in line 193: S786 S786 54,8
Error in line 182: dR1f4PyRH7 S786 84,4
Error in line 208: dR1f4PyRH7 S707 70,2
Error in line 213: oD3rCzzX S786 96,14
Error in line 225: S786 A182 24,4
Error in line 228: Xe1N3J S707 42,6
Error in line 215: kT1ZHEjv A499 1,0
Error in line 218: oD3rCzzX S786 355,7
Error in line 235: oD3rCzzX S707 8,2
Error in line 240: yQCgqDj A182 16,3
Error in line 237: dR1f4PyRH7 A182 21,7
